[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.5.0"
wasm-bindgen = "0.2.86"
web-sys = "0.3.63"
yew = { version = "0.20.0", features = ["csr"] }
